# ruroco

./: .gitignore  AGENTS.md  AndroidManifest.xml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE.md  Makefile  README.md  SECURITY.md  _typos.toml  android.nix  build.rs  cliff.toml  deny.toml  linux.nix  manifest.yaml  rustfmt.toml  version.sh
.cargo/: config.toml
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: docs.yml  rust.yml
config/: commands.toml  config.toml
docs/: book.toml  mermaid-init.js  mermaid-overrides.css
docs/diagrams/: dependency_graph.dot  flow_diagram.dot
docs/src/: SUMMARY.md  commander.md  introduction.md
docs/src/architecture/: build-and-deploy.md  cryptography.md  end-to-end-flow.md  modules.md  overview.md  protocol.md  security.md
docs/src/client/: config.md  counter-lock-gen-util.md  overview.md  send.md  update.md  wizard.md
docs/src/common/: crypto.md  fs-logging.md  ipc.md  overview.md  protocol.md
docs/src/server/: blocklist-ratelimiter.md  commander.md  config-keys.md  handler.md  overview.md  socket-signal.md
docs/src/ui/: android.md  app.md  overview.md  support.md  tabs.md
fail2ban/: ruroco.conf
fail2ban/filter.d/: ruroco.conf
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_path.rs
keys/: ruroco-release-ed25519.pub.pem
nix/: android.nix  linux.nix
scripts/: analyze.sh  dev_ui_android.sh  release_android.sh  release_linux.sh  test_end_to_end.sh
src/: CLAUDE.md  android.rs  blocklist.rs  client.rs  commander.rs  commander_data.rs  common.rs  config.rs  config_client.rs  config_server.rs  data.rs  fuzz_api.rs  github_api_definition.rs  lib.rs  main.rs  rust_slint_bridge.rs  saved_command_list.rs  server.rs  slint_bridge.rs  ui.rs  util.rs
src/client/: CLAUDE.md  client.rs  config.rs  config_commands.rs  counter.rs  gen.rs  lock.rs  mod.rs  send.rs  send_network.rs  test_util.rs  update.rs  util.rs  wizard.rs  wizard_systemd.rs
src/client/config/: CLAUDE.md  commands.rs  mod.rs
src/client/send/: CLAUDE.md  core.rs  mod.rs  network.rs
src/client/update/: CLAUDE.md  filesystem.rs  github.rs  mod.rs  mod_tests.rs
src/client/wizard/: CLAUDE.md  core.rs  mod.rs  wizard.rs  wizard_systemd.rs
src/commander/: CLAUDE.md  config.rs  exec.rs  ip_filter.rs  mod.rs  tests.rs
src/common/: CLAUDE.md  android_clipboard.rs  android_keyboard.rs  android_status_bar.rs  android_util.rs  client_data.rs  common.rs  crypto_handler.rs  data.rs  data_parser.rs  fs.rs  instance_lock.rs  ipc.rs  logging.rs  mod.rs  serialization_util.rs  time_util.rs
src/common/android/: CLAUDE.md  clipboard.rs  clipboard_read.rs  jni_util.rs  keyboard.rs  keyboard_hide.rs  mod.rs  prefs.rs  status_bar.rs  util.rs
src/common/crypto/: CLAUDE.md  handler.rs  handler_client.rs  handler_ops.rs  handler_server.rs  mod.rs
src/common/protocol/: CLAUDE.md  client_data.rs  client_data_client.rs  client_data_server.rs  constants.rs  mod.rs  parser.rs  serialization.rs  serialization_server.rs
src/common/protocol/parser/: client.rs  mod.rs  server.rs
src/config/: config_client.rs  config_server.rs  mod.rs
src/server/: CLAUDE.md  blocklist.rs  blocklist_serialization.rs  commander.rs  commander_data.rs  commander_exec.rs  config.rs  error_throttle.rs  handler.rs  keys.rs  listener.rs  mod.rs  rate_limiter.rs  server.rs  signal.rs  socket.rs  util.rs
src/server/commander/: CLAUDE.md  exec.rs  mod.rs
src/server/config/: CLAUDE.md  commander.rs  mod.rs  server.rs
src/ui/: CLAUDE.md  android.rs  android_update.rs  android_util.rs  app-window.slint  app.rs  app.slint  app_frame.rs  arg-row.slint  colors.rs  command-logic.slint  command_data.rs  commands-input.slint  create.slint  dashboard.slint  execute.slint  mod.rs  public-key.slint  rust_slint_bridge.rs  rust_slint_bridge_ctx.rs  saved_command_list.rs  slint-rust-bridge.slint  ui.rs  util.rs
src/ui/app/: CLAUDE.md  dashboard_state.rs  execute_state.rs  mod.rs
src/ui/tabs/: CLAUDE.md  create.rs  dashboard.rs  dashboard_config.rs  dashboard_key.rs  execute.rs  mod.rs  widgets.rs
systemd/: ruroco-commander.service  ruroco.service  ruroco.socket
tests/: blocklist_test.rs  client_gen_test.rs  client_send_test.rs  commander_config.toml  commander_test.rs  common_test.rs  config.toml  config_end_to_end.toml  integration_test.rs  server_config.toml  server_test.rs
tests/conf_dir/: ruroco.key  ruroco_public.pem
tests/files/: commands_end_to_end.toml  config.toml  config_end_to_end.toml  config_invalid.toml  config_invalid_syntax.toml
