[package]
name = "ruroco"
version = "0.11.0"
edition = "2021"
repository = "https://github.com/beac0n/ruroco"

[dependencies]
clap = { version = "4.5", features = ["derive", "string"] }
openssl = { version = "0.10" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
slint = "1.10"
jni = "0.22"
ndk-context = "0.1"
reqwest = { version = "0.13", features = ["blocking", "json"] }
base64 = "0.22"
blake2 = "0.10.6"
chrono = { version = "0.4", features = ["clock"] }
anyhow = "1.0"

[dev-dependencies]
test-with = { version = "*", default-features = false, features = [] }
tempfile = "3.23.0"

[lib]
crate-type = ["lib", "cdylib"]

[features]
release-build = ["openssl/vendored"]
android-build = ["slint/backend-android-activity-06"]

[build-dependencies]
slint-build = "1.9.2"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = "z"       # Optimize for binary size
strip = true          # Automatically strip symbols from the binary
debug = true          # debug information
lto = true            # Enable Link Time Optimization
codegen-units = 1     # Optimize for single codegen unit (better performance)
panic = 'abort'       # Abort on panic (smaller binary size)
