[package]
name = "ruroco"
version = "0.11.0"
edition = "2021"
repository = "https://github.com/beac0n/ruroco"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
blake2 = "0.10.6"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive", "string"] }
openssl = { version = "0.10" }
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true } # only needed for client to update itself
serde = { version = "1.0", features = ["derive"] }
slint = { version = "1.10", optional = true }
toml = { version = "0.9", optional = true }

# android dependencies
jni = { version = "0.21", optional = true }
ndk-context = { version = "0.1", optional = true }

[dev-dependencies]
test-with = { version = "*", default-features = false, features = [] }
tempfile = "3.23.0"

[build-dependencies]
slint-build = { version = "1.9.2", optional = true }

[features]
default = ["with-gui", "with-server"]
release-build = ["openssl/vendored"]
android-build = ["dep:ndk-context", "dep:jni", "slint/backend-android-activity-06"]
with-server = ["dep:toml"]
with-gui = ["dep:slint", "dep:toml", "dep:slint-build", "with-client"]
with-client = ["dep:reqwest"]

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "ruroco-client"
path = "src/bin/client.rs"
required-features = ["with-client"]

[[bin]]
name = "ruroco-client-ui"
path = "src/bin/client_ui.rs"
required-features = ["with-gui"]

[[bin]]
name = "ruroco-server"
path = "src/bin/server.rs"
required-features = ["with-server"]

[[bin]]
name = "ruroco-commander"
path = "src/bin/commander.rs"
required-features = ["with-server"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = "z"       # Optimize for binary size
strip = true          # Automatically strip symbols from the binary
debug = true          # debug information
lto = true            # Enable Link Time Optimization
codegen-units = 1     # Optimize for single codegen unit (better performance)
panic = 'abort'       # Abort on panic (smaller binary size)
