[package]
name = "ruroco"
version = "0.14.2"
edition = "2021"
repository = "https://github.com/beac0n/ruroco"

[dependencies]
rmp-serde = "=1.3.1"
anyhow = "=1.0.102"
base64 = "=0.22.1"
blake2 = "=0.10.6"
zeroize = { version = "=1.8.2", features = ["derive"] }
chrono = { version = "=0.4.44", features = ["clock"] }
clap = { version = "=4.6.1", features = ["derive", "string"] }
openssl = { version = "=0.10.80" }
nix = { version = "=0.31.3", features = ["user"] }
ureq = { version = "=2.12.1", features = ["json"], optional = true }
tempfile = { version = "=3.27.0", optional = true }
serde = { version = "=1.0.228", features = ["derive"] }
eframe = { version = "=0.34.2", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"], optional = true }
toml = { version = "=1.1.2", optional = true }

# android dependencies (only ever built when targeting Android, so --all-features stays buildable on desktop hosts, e.g. RustRover coverage)
[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "=0.22.4", optional = true }
ndk-context = { version = "=0.1.1", optional = true }
android-activity = { version = "=0.6.1", features = ["native-activity"], optional = true }
wgpu = { version = "=29.0.3", default-features = false, features = ["gles"], optional = true }

[dev-dependencies]
test-with = { version = "=0.16.1", default-features = false, features = [] }
tempfile = "=3.27.0"
egui_kittest = { version = "0.34", default-features = false }

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = []
release-build = ["openssl/vendored"]
android-build = ["dep:ndk-context", "dep:jni", "dep:android-activity", "dep:wgpu", "eframe/android-native-activity", "eframe/wgpu", "with-gui"]
with-server = ["dep:toml"]
with-gui = ["dep:eframe", "dep:toml", "with-client"]
with-client = ["dep:ureq", "dep:tempfile"]


[[bin]]
name = "client"
path = "src/bin/client.rs"
required-features = ["with-client"]

[[bin]]
name = "client_ui"
path = "src/bin/client_ui.rs"
required-features = ["with-gui"]

[[bin]]
name = "server"
path = "src/bin/server.rs"
required-features = ["with-server"]

[[bin]]
name = "commander"
path = "src/bin/commander.rs"
required-features = ["with-server"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = "z"       # Optimize for binary size
strip = true          # Automatically strip symbols from the binary
debug = true          # debug information
lto = true            # Enable Link Time Optimization
codegen-units = 1     # Optimize for single codegen unit (better performance)
panic = 'abort'       # Abort on panic (smaller binary size)
